GtkPopover: Fix distorted circle buttons inside row

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -2036,6 +2036,8 @@ popover.background {
     label { padding: 0.2em 0 0.25em; }
   }
 
+  button.image-button { padding: 0.5em; }
+
   button.model.image-button { min-height: 2em; }
 
   .linked > button {
