--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -3106,6 +3106,8 @@ popover.background {
     popover.background .budgie-polkit-dialog button label,
     .budgie-polkit-dialog popover.background button label {
       padding: 0.2em 0 0.25em; }
+  popover.background button.image-button {
+    padding: 0.5em; }
   popover.background button.model.image-button {
     min-height: 2em; }
   popover.background .linked > button {
